Fix color contrast in QandASet
Use $c_pine: rgb(12, 50, 44), 0c322c

--- a/source-assets/styles2022/sass/custom/content-qanda.sass
+++ b/source-assets/styles2022/sass/custom/content-qanda.sass
@@ -20,18 +20,21 @@
 .js-on
   .question
     cursor: pointer
-    color: $c_funky_darker_jungle
+    color: $c_pine
     position: relative
 
     .keycap,
     .literal,
     .package,
     code
-      color: $c_funky_darker_jungle
+      color: $c_pine
 
     &:hover,
     &:focus
-      color: $c_funky_pine_prelight
+      color: $c_pine
+      text-decoration: underline
+      text-decoration-thickness: 3px
+      text-decoration-color: $c_pine
 
     &::before
       content: ''
@@ -41,7 +44,7 @@
       width: 17px
       background-repeat: no-repeat
       background-position: 50% 50%
-      background-image: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!-- Font Awesome Free 5.15.3 by @fontawesome, https://fontawesome.com - CC BY 4.0 --><path fill="#{$c_funky_darker_jungle_url}" d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"/></svg>')
+      background-image: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!-- Font Awesome Free 5.15.3 by @fontawesome, https://fontawesome.com - CC BY 4.0 --><path fill="#{$c_pine_url}" d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"/></svg>')
       transform: rotate(-90deg)
       transition: transform 0.2s linear
 
@@ -51,6 +54,7 @@
   .qandaentry.active
     .question
       color: $c_pine
+      text-decoration: none
 
       .keycap,
       .literal,
@@ -58,6 +62,13 @@
       .replaceable,
       code
         color: #333
+
+      &:hover,
+      &:focus
+        color: $c_pine
+        text-decoration: underline
+        text-decoration-thickness: 3px
+        text-decoration-color: $c_pine
 
       &::before
         transform: rotate(0.01deg)
